# Othni

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
data/: Cleaning.ipynb  elder_futhark.csv  younger_futhark.csv
desktop/src/: main.rs
server/: .env  Cargo.toml  TROUBLESHOOTING.md
server/migrations/2023-01-16-181736_create_rune/: down.sql  up.sql
server/src/: main.rs  schema.rs
server/src/clients/: db.rs  mod.rs
server/src/handlers/: futhark.rs  mod.rs  ping.rs  rune.rs  rune_set.rs
server/src/repos/: futhark.rs  mod.rs  rune.rs
src/: app.rs  main.rs
