[package]
name = "othni-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tracing-actix-web = "0.7"
diesel = { version = "2.0.2", features = ["postgres"] }
dotenvy = "0.15"


handlers = { path = "src/handlers" }
clients = { path = "src/clients" }
